# bci2000web

./: .babelrc  .devcontainer.json  .dockerignore  .gitignore  .npmrc  NOTES.md  README.md  START.bat  Translation_electrode.txt  bci2000web.js  config.json  docker-compose.yml  getparadigms.js  helpers.js  nextjs.json  package-lock.json  package.json  postcss.config.js  tsconfig.json  turbo.json  webpack.config.babel.js  webpack.config.js
.github/: PULL_REQUEST_TEMPLATE.md
apps/bci2000web/src/custom/ZMQ_Filter/: CMakeLists.txt
batch.ecog/: .gitignore  2_BLACKROCK_RECORD.bat  2_LATENCY_TEST.bat  2_RUN_VISUALIZATIONS.bat  3_CCEPS.bat  3_TASK_AuditoryButtonPress.bat  3_TASK_AuditoryWordRepetition.bat  3_TASK_CategoryFluency_Text.bat  3_TASK_ImageSemantics.bat  3_TASK_ImageSemantics_Taboo.bat  3_TASK_NamingPriming.bat  3_TASK_PassageReading.bat  3_TASK_Semantic_Fluency.bat  3_TASK_Semantics_Game.bat  3_TASK_SyllableReading.bat  3_TASK_SyllableRepetition.bat  3_TASK_UPMC_CovertReading.bat  3_TASK_UPMC_Localizer.bat  3_TASK_UPMC_WordClass.bat  3_TASK_WordReading.bat  4_FILEPLAYBACK_ImageSemantics.bat  5_MAPPING.bat  RunJoystickTask.bat  RunJoystickTaskInverted.bat  bcijs_test_system.bat  brnet.bat  brnet_dual.bat  categories.txt  kill_bci2000.bat  rep_rde.txt  rep_rde_syl.txt  screen_setup.prm  semanticfluency.bat  setup_bciws.bat  setup_storage.txt  setup_system.txt
components/: ConnectionState.tsx  Notes.tsx  Paradigms.tsx  Tasks.tsx  Toolbox.tsx  store.ts
data/: .gitignore
docs/: conf.py  index.html  index.rst  swagger.json
generate/: .devcontainer.json  (+1 more)
(+478 files in other folders)
